--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,9 @@
             ],
             "styles": [
               "semantic/dist/semantic.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/froala-editor/css/froala_editor.pkgd.min.css",
+              "./node_modules/froala-editor/css/froala_style.min.css"
             ],
             "scripts": [
               "semantic/dist/semantic.js"
