--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-froala-wysiwyg": "^3.1.0",
     "firebase": "^7.9.1",
     "fomantic-ui": "^2.8.4",
+    "ng-quill": "^4.5.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
