bye bye fomantic, hello bootstrap/shards-ui

--- a/angular.json
+++ b/angular.json
@@ -28,13 +28,16 @@
               "src/assets"
             ],
             "styles": [
-              "semantic/dist/semantic.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/shards-ui/dist/css/shards.min.css",
               "src/styles.scss",
               "./node_modules/froala-editor/css/froala_editor.pkgd.min.css",
               "./node_modules/froala-editor/css/froala_style.min.css"
             ],
             "scripts": [
-              "semantic/dist/semantic.js"
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.js",
+              "./node_modules/shards-ui/dist/js/shards.min.js"
             ]
           },
           "configurations": {
