--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "angular-froala-wysiwyg": "^3.1.0",
+    "bootstrap": "^4.4.1",
     "firebase": "^7.9.1",
-    "fomantic-ui": "^2.8.4",
+    "jquery": "^3.4.1",
     "ng-quill": "^4.5.3",
     "rxjs": "~6.4.0",
+    "shards-ui": "^3.0.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
