--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "angular-froala-wysiwyg": "^3.1.0",
+    "@tinymce/tinymce-angular": "^3.5.0",
     "bootstrap": "^4.4.1",
     "firebase": "^7.9.1",
     "jquery": "^3.4.1",
