--- a/angular.json
+++ b/angular.json
@@ -30,12 +30,14 @@
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/shards-ui/dist/css/shards.min.css",
+              "./node_modules/@fortawesome/fontawesome-free/css/all.css",
               "src/styles.scss"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/bootstrap/dist/js/bootstrap.js",
-              "./node_modules/shards-ui/dist/js/shards.min.js"
+              "./node_modules/shards-ui/dist/js/shards.min.js",
+              "./node_modules/@fortawesome/fontawesome-free/js/all.js"
             ]
           },
           "configurations": {
