--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@tinymce/tinymce-angular": "^3.5.0",
     "bootstrap": "^4.4.1",
     "firebase": "^7.9.1",
